tests/fixtures/invalid/pow_bool_str_none.py
# Cannot call pow() with Bool, Str, None
x = pow(True, "hello", None)
